# haploid

./: .gitignore  AUTHORS  BUGS  ChangeLog  HEADER  Makefile.am  NEWS  README  THANKS  TODO  autogen.sh  configure.ac  configure.in  rec_ck
doc/: haploid.texi
el/: ChangeLog  TODO  haploid-bug-collect.el  haploid-bug.el
examples/: nrm.c  rm_tlta.c  tlta.c
haplib/: geno_func.c  mating.c  recomb.c  spec_func.c
hapsim/: ChangeLog  additive.txt  data.txt  eq-data.txt  haploid.c  haploid.h  io.c  sim.c  trans.c
src/: bits.c  debug.c  eigen.c  geno_func.c  haplib.h  haploid.h  haploidpriv.h  haploidtest.h  mating.c  rec.c  recomb.c  sparse.c  sparse.h  spec_func.c
tests/: diseq.c  ffs.c  gen_table.c  pop_ck.c  prtable.c  rec_ck.c  rec_test.c  rec_test3.c  sim_stop.c  sparse_test.c  tlta.c
